k8s/namespaces/development/sonarqube/sonarqube/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarqube-https
  namespace: development
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarqube.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
      services:
        - name: sonarqube
          port: 9000
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarqube-http
  namespace: development
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarqube.oglesby.io`)
      kind: Rule
      services:
        - name: sonarqube
          port: 9000
      middlewares:
      - name: internal-whitelist
        namespace: ingress
      - name: redirect-https
        namespace: ingress
